# AI-Camps

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
agentcore/: config.json  system_prompt.md
agentcore/lambda_tools/: lambda_handler.py
config/: README.md  institutions.csv  majors.csv  transfer_ge_policies.csv
data/: README.md
data/processed/kb/: avc_cal_getc.csv  avc_cal_getc.csv.metadata.json  avc_catalog.csv  avc_catalog.csv.metadata.json  avc_faq.csv  avc_faq.csv.metadata.json  avc_transfer_pathways.csv  avc_transfer_pathways.csv.metadata.json
data/processed/structured_store/: articulation.json  courses.json  ge_certification.json  offering_pattern.json  prereq_graph.json
docs/: architecture.md
infra/: README.md  build_advisor_tools_lambda.py  deploy_agentcore.py  upload_to_s3.sh
scripts/: build_ge_certification.py  build_kb_content.py  build_reviewed_prereqs.py  build_structured_store.py  derive_offering_patterns.py  extract_prereqs.py  fetch_assist_seed.py  fetch_banner_backfill.py  join_assist_banner.py  validate_config.py
src/transfer_advisor/: _project_root.py
src/transfer_advisor/domain/: __init__.py  models.py
src/transfer_advisor/tools/: __init__.py  (+3 more)
tests/: test_agentcore_deploy.py  test_config_contracts.py  test_kb_content.py  test_lambda_tools.py  test_live_sections.py  test_managed_agent.py  test_project_root.py  test_streamlit_ui.py  test_structured_store.py  test_system_prompt.py  test_transcript_parser.py  test_transcript_tool.py  test_validate_plan.py
(+13 files in other folders)
